<resources>
    <string name="app_name">Doms LEARN CHINESE:WORD GAME</string>
    <string name="app_id">218166723270</string>
    <string name="about_me_label">ABOUT ME</string>
    <string name="about_me_text">ABOUT ME:\n\n
        My name is Dominik. I am a software developer. If you want to know more, check my blog
        https://dominiksymonowicz.com/ . I hope You enjoying use my program. If You have any USEFUL comment, suggestion, feedback.\n
        Feel happy to send to dmspastor@gmail.com.\n\n
        Ciao.
    </string>
    <string name="about_program_label">ABOUT PROGRAM</string>
    <string name="about_program_text">ABOUT GAME:\n
        This game is designed to help me with learning chinese.\n
        I learn mandarin chinese and this app is a my essential tool improve my vocabulary with useful words , phrases
        and sentences.
        It offer few types of game and tools.\n
        \tFor general vocabulary practice, play adventure game.\n
        \tFor practice radicals, play radicals game.\n
        \tFor practice to hsk exam, play hsk exams test.\n
        \tFor vocabulary review go to learning and select mini lesson.\n
        \tTo see dictionary,go to learning and show dictionary.\n
    </string>
    <string name="thanks_label">THANKS</string>
    <string name="about_thanks_text">THANKS:\n\n
        PEOPLE:\n
        * My wife.\n
        * Friends.\n
        * People who making awesome tunes.\n
        \n
        SPECIAL THANKS:\n\n
        Mark James (www.famfamfam.com) for his epic icon set!\n
        www.fontsquirrel.com, www.fictionalhead.com for Awesome Font sources!\n
        \n
        DICTIONARY Sources:
        \n\t http://www.mdbg.net/chindict/chindict.php
        \n\t http://www.nciku.com/
        \n\t http://www.tanos.co.uk/hsk/
        \n\t http://www.zein.se/patrick/3000en.html
        \n\t http://www.blcu.edu.cn/blcuweb/english/index-en.asp
        \n\t http://www.chinese.cn/
        \n
        \n Other THANKS:\n
        * SAW (http://softwarealliancewales.com/)\n
        * stackoverflow.com website for useful solutions.\n
        * android-er.blogspot.co.uk for awesome blog entries\n
        \n THANKS for useful feedback:\n
        Evan Herbert\n
        Gerald Manley\n

    </string>
    <string name="eula_label">EULA</string>
    <string name="lesson_about">

        Here you can find few mini lessons (treat this as revision to improve your vocabulary and knowledge about
        Chinese grammar).\n
        How this works. It is split into few parts.\n
        I) First you need select lesson.\n
        II) On top, you can find about topic of the lesson. On bottom, you can find list of words in this application
        about topic. When you will read everything and remember all words, press Start Test.\n
        III) Quick 10 question to confirm, that you remember some words.\n
        IV) Done. You can go to next lesson, repeat test or back to main menu\n\n
        Remember!\n
        1. These lessons do NOT replace proper professional lesson from book and course!\n
        2. These lessons should be treated as revision.\n
        3. These lessons not have ability to play Chinese character.\n
        4. I will add levels constantly in future releases, so back here when new version is released.\n
    </string>
    <string name="lesson_title">LESSON</string>
    <string name="lesson_content">Woops!\n\nNo content for this lesson :(.\nEmail me and shout that i mess
        this.\nThanks!
    </string>
    <string name="lesson_test_yourself">
        If you believe,that you learn enough.\n
        Press \'start test\',to perform quick and easy test and if you pass you will unlock next lesson!
    </string>
    <string name="new_game_button_title">NEW GAME</string>
    <string name="highscore_button_title">High score</string>
    <string name="extras_title">Extras</string>
    <string name="show_dictionary_title">Show dictionary</string>
    <string name="back_to_menu">Back to\n Main Menu</string>
    <string name="test_start">Start Test</string>
    <string name="select_lesson">Select Lesson</string>
    <string name="learning_title">Learning</string>
    <string name="pattern_title">Sentence Patterns</string>
    <string name="chat_title">Chat patterns</string>
    <string name="select_chat_pattern">Select a chat</string>
    <string name="chat_pattern_about">
        Warning! This is still work in progress.\n
        (Let\'s me know,if program crashes or it contains mistakes.Thank you!)\n
        \n
        Occasionally.I have possibility to do small chats in Chinese, but quite often i am not prepared so i am struggle
        with remind myself various words and sentence.
        \"Chats\" contains various scenarios and help me to mind a common and simple sentences that are useful in these
        situation.\n
        And i Hope it will help you too practice chinese in real life situation of adult person.\n
        Remember! If you learn chinese,then is better to use books as their structure is designed to learn chinese
        sentence, where my sentences are design to use them in real life situation.\n
        As always I will be add much in next release.\n
    </string>
    <string name="learning_tips_title">Learning tips</string>
    <string name="useful_numbers_title">Useful numbers in china</string>
    <string name="show_info">Show information</string>
    <string name="show_words">Show words</string>
    <string name="show_sentences">Show sentences</string>
    <string name="extras_to_do_before_go_title">TO DO BEFORE TRAVEL</string>
    <string name="chat_content">Content of chat..</string>
    <string name="extras_ambulance">Ambulance</string>
    <string name="extras_ambulance_number">120</string>
    <string name="extras_fire_brigade">Fire brigade</string>
    <string name="extras_fire_brigade_number">119</string>
    <string name="extras_police">Police</string>
    <string name="extras_police_number">110</string>
    <string name="extras_traffic_accidents">Traffic Accidents</string>
    <string name="extras_extras_traffic_accidents_number">122</string>
    <string name="extras_public_transport">Public Transport</string>
    <string name="extras_railway_info">Railway Information</string>
    <string name="extras_railway_info_number">12306</string>
    <string name="extras_hainan_airlines">Hainan Airlines</string>
    <string name="extras_hainan_airlines_value">950718</string>
    <string name="extras_southern_airlines">Southern Airlines</string>
    <string name="extras_southern_airlines_value">400-669-5539</string>
    <string name="extras_shenzen_airlines">Shenzhen Airlines</string>
    <string name="extras_shenzen_airlines_value">95080</string>
    <string name="extras_xiamen_airlines">Xiamen Airlines</string>
    <string name="extras_xiamen_airlines_value">0592 - 57 - 39888</string>
    <string name="extras_shandong_airlines">Shandong Airlines</string>
    <string name="extras_shandong_airlines_value">4006096777</string>
    <string name="extras_sichuan_airlines">Sichuan Airlines</string>
    <string name="extras_sichuan_airlines_value">4008300999</string>
    <string name="extras_air_china">Air China</string>
    <string name="extras_air_china_value">95583</string>
    <string name="extras_china_eastern_airlines">China Eastern Airline</string>
    <string name="extras_china_eastern_airlines_value">95530</string>
    <string name="extras_international_airports_label">International Airports</string>
    <string name="extras_beijing_international_airport">Beijing Capital\n International Airport</string>
    <string name="extras_beijing_international_airport_value">96158</string>
    <string name="extras_shanghai_pudong_airport">Shanghai Pudong\n International Airport</string>
    <string name="extras_shanghai_pudong_airport_value">96990</string>
    <string name="extras_agricultural_bank">Agricultural\n Bank of China</string>
    <string name="extras_agricultural_bank_value">95599</string>
    <string name="extras_banks">Banks</string>
    <string name="extras_bank_communications">Bank of\n Communications</string>
    <string name="extras_bank_communications_value">95559</string>
    <string name="extras_construction_bank">China\n Construction Bank</string>
    <string name="extras_construction_bank_value">95533</string>
    <string name="extras_citibank">Citibank</string>
    <string name="extras_citibank_value">800–830-1880</string>
    <string name="extras_hsbc">HSBC</string>
    <string name="extras_hsbc_value">800–820-8828</string>
    <string name="extras_iac_bank">Industrial and\n CommercialBank\n of China</string>
    <string name="extras_iac_bank_value">95588</string>
    <string name="extras_standard_chartered_bank">Standard Chartered\n Bank</string>
    <string name="extras_standard_chartered_bank_value">800–820-8088</string>
    <string name="options">Options</string>
    <string name="adUnitId">ca-app-pub-1669938002445825/8358612701</string>
    <string name="b4go_travel_guide">Travel guide</string>
    <string name="b4go_dictionary">Take dictionary with you.</string>
    <string name="b4go_medicine">Take some medicine for diarrhoea, ache and anti-vomit stuff.</string>
    <string name="b4go_gel">Antibacterial gel.</string>
    <string name="b4go_first_aid">Mini first-aid kit.</string>
    <string name="b4go_roaming">Learn how to switch off roaming in your smartphones.</string>
    <string name="b4go_embassy">Embassy contact details.</string>
    <string name="b4go_passport">Passport.</string>
    <string name="b4go_national_id">ID</string>
    <string name="b4go_travel_details_friends">Leave travel details to friend or family.</string>
    <string name="b4go_insurance">Arrange health and travel insurance.</string>
    <string name="b4go_vaccinations">Book your vaccinations.</string>
    <string name="tests_title">Tests</string>
    <string name="learning_menu_title">LEARNING MENU</string>
    <string name="lessons_title">LESSONS</string>
    <string name="b4go_adapter">Bring the Right Power Adapter!</string>
    <string name="emergency">Emergency</string>
    <string name="show_information">Show information</string>
    <string name="show_vocabulary">Show vocabulary</string>
</resources>