<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/default_screen_scroll_view">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/title"
            android:text="@string/extras_to_do_before_go_title" />

        <CheckBox
            style="@style/extras_checkbox"
            android:text="@string/b4go_vaccinations" />

        <CheckBox
            style="@style/extras_checkbox"
            android:text="@string/b4go_insurance" />

        <CheckBox
            style="@style/extras_checkbox"
            android:text="@string/b4go_travel_details_friends" />

        <CheckBox
            style="@style/extras_checkbox"
            android:text="@string/b4go_national_id" />

        <CheckBox
            style="@style/extras_checkbox"
            android:text="@string/b4go_passport" />

        <CheckBox
            style="@style/extras_checkbox"
            android:text="@string/b4go_embassy" />

        <CheckBox
            style="@style/extras_checkbox"
            android:text="@string/b4go_roaming" />

        <CheckBox
            style="@style/extras_checkbox"
            android:text="@string/b4go_first_aid" />

        <CheckBox
            style="@style/extras_checkbox"
            android:text="@string/b4go_gel" />

        <CheckBox
            style="@style/extras_checkbox"
            android:text="@string/b4go_medicine" />

        <CheckBox
            style="@style/extras_checkbox"
            android:text="@string/b4go_dictionary" />

        <CheckBox
            style="@style/extras_checkbox"
            android:text="@string/b4go_travel_guide" />

        <CheckBox
            style="@style/extras_checkbox"
            android:text="@string/b4go_adapter" />
    </LinearLayout>
</ScrollView>
