<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/default_screen_layout">

    <TextView
        android:id="@+id/chat_title"
        style="@android:style/TextAppearance.Large"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal|top"
        android:text="@string/pattern_title" />

    <TextView
        android:id="@+id/chat_content"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|top"
        android:text="@string/chat_content"
        android:textColor="@color/first_main_font_color" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:shrinkColumns="*"
        android:stretchColumns="*">

        <ToggleButton
            android:id="@+id/sentence_switch"
            style="@style/switch_button_style"
            android:checked="false"
            android:textOff="@string/show_sentences"
            android:textOn="@string/show_info" />

        <ToggleButton
            android:id="@+id/word_switch"
            style="@style/switch_button_style"
            android:text="@string/show_words"
            android:textOff="@string/show_words"
            android:textOn="@string/show_info" />
    </TableLayout>

    <ListView
        android:id="@+id/sentencesListView"
        style="@style/list_style"
        android:layout_width="fill_parent"
        android:layout_gravity="bottom" />

    <ListView
        android:id="@+id/wordsListView"
        style="@style/list_style"
        android:layout_gravity="bottom" />

</LinearLayout>
