<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/default_screen_layout">

    <TextView
        style="@style/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center|center_vertical|center_horizontal|top"
        android:text="@string/lesson_title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lesson_about"
        android:textColor="@color/first_main_font_color" />

    <Button
        android:id="@+id/lesson_selection_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/page_green"
        android:text="@string/select_lesson"
        android:textColor="@color/menu_button_font" />

</LinearLayout>
